--- a/Chapter2_DNA.qmd
+++ b/Chapter2_DNA.qmd
@@ -230,7 +230,7 @@ config.pad_token_id = dna_vocab["[PAD]"]
 model = ModernBertForMaskedLM(config)
 ```
 
-The keenly eyed among you see a lot of powers of 2, 8 is 2^3, 256, 512 are also powers of two, etc. Computer memory encodes in bits and bytes, and is designed around powers of two. Building matrices that are powers of 2, 16, 32, 64, etc. makes them fit in memory more efficiently, and this can have serious consequences for training efficiency (see **Figure 2.1**).
+The keenly eyed among you see a lot of powers of 2, 8 is 2\^3, 256, 512 are also powers of two, etc. Computer memory encodes in bits and bytes, and is designed around powers of two. Building matrices that are powers of 2, 16, 32, 64, etc. makes them fit in memory more efficiently, and this can have serious consequences for training efficiency (see **Figure 2.1**).
 
 ![**Figure 2.1** the power of powers of two.](images/paste-19.png){fig-align="center"}
 
