--- a/references.bib
+++ b/references.bib
@@ -172,3 +172,33 @@
 	doi = {10.48550/ARXIV.2212.14034},
 	url = {https://arxiv.org/abs/2212.14034}
 }
+
+@article{jumper2021a,
+	title = {Highly accurate protein structure prediction with AlphaFold},
+	author = {Jumper, John and Evans, Richard and Pritzel, Alexander and Green, Tim and Figurnov, Michael and Ronneberger, Olaf and Tunyasuvunakool, Kathryn and Bates, Russ and {{\v{Z}}ídek}, Augustin and Potapenko, Anna and Bridgland, Alex and Meyer, Clemens and Kohl, Simon A. A. and Ballard, Andrew J. and Cowie, Andrew and Romera-Paredes, Bernardino and Nikolov, Stanislav and Jain, Rishub and Adler, Jonas and Back, Trevor and Petersen, Stig and Reiman, David and Clancy, Ellen and Zielinski, Michal and Steinegger, Martin and Pacholska, Michalina and Berghammer, Tamas and Bodenstein, Sebastian and Silver, David and Vinyals, Oriol and Senior, Andrew W. and Kavukcuoglu, Koray and Kohli, Pushmeet and Hassabis, Demis},
+	year = {2021},
+	month = {07},
+	date = {2021-07-15},
+	journal = {Nature},
+	pages = {583--589},
+	volume = {596},
+	number = {7873},
+	doi = {10.1038/s41586-021-03819-2},
+	url = {http://dx.doi.org/10.1038/s41586-021-03819-2},
+	langid = {en}
+}
+
+@article{senior2020,
+	title = {Improved protein structure prediction using potentials from deep learning},
+	author = {Senior, Andrew W. and Evans, Richard and Jumper, John and Kirkpatrick, James and Sifre, Laurent and Green, Tim and Qin, Chongli and {{\v{Z}}ídek}, Augustin and Nelson, Alexander W. R. and Bridgland, Alex and Penedones, Hugo and Petersen, Stig and Simonyan, Karen and Crossan, Steve and Kohli, Pushmeet and Jones, David T. and Silver, David and Kavukcuoglu, Koray and Hassabis, Demis},
+	year = {2020},
+	month = {01},
+	date = {2020-01-15},
+	journal = {Nature},
+	pages = {706--710},
+	volume = {577},
+	number = {7792},
+	doi = {10.1038/s41586-019-1923-7},
+	url = {http://dx.doi.org/10.1038/s41586-019-1923-7},
+	langid = {en}
+}
